--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.5
   shared_preferences: ^2.2.2
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.19.4
 
 dev_dependencies:
   flutter_test:
