--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.4
+  cloud_firestore: ^4.17.3
 
 dev_dependencies:
   flutter_test:
