--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.3
+  firebase_storage: ^11.5.6
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
