--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^4.17.3
   firebase_storage: ^11.5.6
   file_picker: ^6.1.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
