--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.5.6
   file_picker: ^6.1.1
   uuid: ^4.5.1
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
